transaction form working front and back end

--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -1,39 +1,2 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600&display=swap");
-
-html {
-  box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
-  scroll-behavior: smooth;
-}
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-body {
-  font-family: "Barlow", sans-serif;
-  margin: 0px;
-  padding: 0px;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ul,
-ol,
-li,
-textarea,
-input {
-  margin: 0px;
-  padding: 0px;
-  font-weight: 300;
-}
-
-a {
-  color: #333333;
-  text-decoration: none;
-}
+@import "./base";
+@import "./layout";
