functionality up to delete records

--- a/frontend/src/assets/scss/_base.scss
+++ b/frontend/src/assets/scss/_base.scss
@@ -32,8 +32,11 @@ input {
   padding: 0px;
   font-weight: 300;
 }
-
 a {
   color: #333333;
   text-decoration: none;
+}
+hr {
+  border: none;
+  border-top: 0.75px solid #cccccc;
 }
